--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,9 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
+// Vue Select
+@import "vue-select/src/scss/vue-select.scss";
+
 @tailwind base;
 
 @tailwind components;
